--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -235,3 +235,15 @@
     margin: 1% 0px 0px 0px;
 }
 
+.caja-contador {
+    width: 124px;
+    height: 36px;
+    background: $color-background_cajas_blanca;
+    box-shadow: $box-shadow-grabacion;
+    border: $border-caja-blanca-grabacion;
+    
+}
+
+.caja-cargando {
+
+}
