Barra de progreso

--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -243,7 +243,25 @@
     border: $border-caja-blanca-grabacion;
     
 }
+.caja-contenedora-cargando {
+    width: 328px;
+    height: 27px;
+    background: #B4B4B4;
+    box-shadow:  inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
 
-.caja-cargando {
+}
 
+
+.rectangulo-inactivo {
+    width: 12px;
+    height: 20px;
+    background: #999999;
+    border: 1px solid #cecccc;
+}
+
+.rectangulo-activo {
+    width: 12px;
+    height: 20px;
+    background: #F7C9F3;
+    border: 1px solid #cecccc;
 }
