Terminar caja exito

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -98,7 +98,18 @@ body {
     height: 67px;
 }
 
+.div-titulo-exito {
+    width: 88%;
+    height: 87px;
+    align-items: flex-end;
+}
 
+.div-contenedor-boton-listo {
+    width: 100%;
+    height: 150px;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
 
 .section-mis-guifos--crear-guifo--html {
     margin-top: 64px;
