--- a/Koala/_variables.scss
+++ b/Koala/_variables.scss
@@ -51,26 +51,6 @@ $alto-caja_hoy-sugerimos:32px; // 1.9%;
 $alto-caja-gifs-sugeridos: 313px;
 $alto-caja-gifs-resultados: 304px;// 18.4%;
 
-/*------------------------------------------------------------------*/
-
-$alto-logo: 64px; //3.9%;
-$ancho-logo: 102.6px; //102.6px;
-
-$ancho-imagenGif: 19.4%;// 280px;
-
-/*-----------------------Botones--------------------*/
-$alto-boton_crearguifos: 36px; //2.2%
-$alto-botones-general: 36px;
-$alto-boton_buscar: 36px; // 2.2%
-
-$ancho-boton_grande: 144px; 
-$ancho-boton_mediano: 131px;
-$ancho-boton_pequeño: 36px; 
-$ancho-boton_buscar:  8.5%;//102px;
-$ancho-boton_ver-mas: 81px; //;
-$alto-boton_ver-mas: 34px;
-
-/*--------------------------Cajas-----------------------------------*/
 $ancho-caja-crear-gifos-1:  47.5%;//684px;
 $alto-caja-crear-gifos-1: 386px;
 
@@ -86,6 +66,9 @@ $alto-caja-crear-guifos-chequeo: 548px;
 $ancho-caja-contenedor-grabacion: 97.4%; // 838px;
 $alto-caja-contenedor-grabacion: 440px;
 
+$ancho-caja-exito: 721px;
+$alto-caja-exito: 391px;
+
 
 $ancho-caja_contenedora_buscar: 82.9%; //1200px;
 $ancho-caja-contenedor-busqueda-blanco: 88%;
@@ -93,6 +76,29 @@ $ancho-caja_titulo: 82.9%; //1200px;
 $ancho-contenedorGifs: 82.9%; //1200px;
 $ancho-caja-gifs-sugeridos:25%; //288px;
 $ancho-caja-gifs-resultados:24.4%;// 294px
+
+/*------------------------------------------------------------------*/
+
+$alto-logo: 64px; //3.9%;
+$ancho-logo: 102.6px; //102.6px;
+
+$ancho-imagenGif: 19.4%;// 280px;
+
+/*-----------------------Botones--------------------*/
+$alto-boton_crearguifos: 36px; //2.2%
+$alto-botones-general: 36px;
+$alto-boton_buscar: 36px; // 2.2%
+
+$ancho-boton_extra-large:256px;
+$ancho-boton_grande: 144px; 
+$ancho-boton_mediano: 131px;
+$ancho-boton_pequeño: 36px; 
+$ancho-boton_buscar:  8.5%;//102px;
+$ancho-boton_ver-mas: 81px; //;
+$alto-boton_ver-mas: 34px;
+
+/*--------------------------Cajas-----------------------------------*/
+
 
 
 
