--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -15,7 +15,7 @@
     height: $alto-botones-general;
     
 }
-
+.boton--extra-large {width: $ancho-boton_extra-large; }
 .boton--grande  {width: $ancho-boton_grande;}
 .boton--mediano {width: $ancho-boton_mediano;}
 .boton--pequeno {width:$ancho-boton_pequeño;}
@@ -25,14 +25,22 @@
 .boton-rojo {background: $color-boton_rojo;}
 .boton-gris-claro {background: $color-boton-gris-claro; }
 
-
+.boton-general_margin14px {
+    margin-bottom: 14px;
+}
 .boton-general__margin30px {
     margin-right: 30px;
+}
+
+.boton-general__margin46px {
+    margin-right: 46px;
 }
 
 .boton-general__margin15px {
     margin-right: 15px;
 }
+
+
 
 .imagen-boton {
     vertical-align: middle;
@@ -85,6 +93,8 @@
     line-height: $line-height_grande;  
     color: $color-texto_botones-claro;
 }
+
+
     
 /*----------------------------texto pagina---------------------------------*/
 .texto {
@@ -93,6 +103,10 @@
     font-weight: normal;
     color: $color-texto-day;
     
+}
+
+.texto-bold {
+    font-weight: 600;
 }
 .texto--caja-titulo {// Son todas las cajas blancas titulo de seccion
     font-size: $font-size_mediana;
@@ -265,3 +279,38 @@
     background: #F7C9F3;
     border: 1px solid #cecccc;
 }
+
+
+.caja-exito {
+    width: $ancho-caja-exito;
+    height: $alto-caja-exito;
+    background: $color-background_cajas_clara;
+    box-shadow: $box-shadow_claro;
+}
+
+.div-contenedor-exito {
+    height: 367px;
+    width: 721px;
+}
+
+.caja-img-gifo-exito {
+    width: 60%;
+    height: 367px;
+}
+
+.guifo-exito {
+    width: 371px;
+    height: 196px;
+    background: #FFFFFF;
+    border: 1px solid #979797;
+    box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+    margin: 7% 0px 0px 5%;
+}
+
+
+
+.caja-botones-exito {
+    width: 50%;
+    height: 367px;
+}
+
