--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -24,6 +24,9 @@
   box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
   height: 36px; }
 
+.boton--extra-large {
+  width: 256px; }
+
 .boton--grande {
   width: 144px; }
 
@@ -45,8 +48,14 @@
 .boton-gris-claro {
   background: #F0E5EE; }
 
+.boton-general_margin14px {
+  margin-bottom: 14px; }
+
 .boton-general__margin30px {
   margin-right: 30px; }
+
+.boton-general__margin46px {
+  margin-right: 46px; }
 
 .boton-general__margin15px {
   margin-right: 15px; }
@@ -108,6 +117,9 @@
   font-size: 16px;
   font-weight: normal;
   color: #110038; }
+
+.texto-bold {
+  font-weight: 600; }
 
 .texto--caja-titulo {
   font-size: 14px;
@@ -274,6 +286,32 @@
   background: #F7C9F3;
   border: 1px solid #cecccc; }
 
+.caja-exito {
+  width: 721px;
+  height: 391px;
+  background: #E6E6E6;
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+
+.div-contenedor-exito {
+  height: 367px;
+  width: 721px; }
+
+.caja-img-gifo-exito {
+  width: 60%;
+  height: 367px; }
+
+.guifo-exito {
+  width: 371px;
+  height: 196px;
+  background: #FFFFFF;
+  border: 1px solid #979797;
+  box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+  margin: 7% 0px 0px 5%; }
+
+.caja-botones-exito {
+  width: 50%;
+  height: 367px; }
+
 /*Comportamiento*/
 body {
   background-color: #fef4fd;
@@ -340,6 +378,15 @@ body {
     width: 100%;
     justify-content: flex-end;
     height: 67px; }
+  body .div-titulo-exito {
+    width: 88%;
+    height: 87px;
+    align-items: flex-end; }
+  body .div-contenedor-boton-listo {
+    width: 100%;
+    height: 150px;
+    justify-content: flex-end;
+    align-items: flex-end; }
   body .section-mis-guifos--crear-guifo--html {
     margin-top: 64px;
     width: 100%; }
