--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -60,6 +60,22 @@
 .boton-general__margin15px {
   margin-right: 15px; }
 
+.boton-general__margin-top {
+  margin-top: 10px; }
+
+.boton-tema-claro {
+  box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
+  border: 1px solid #CCA6C9;
+  width: 150px; }
+
+.boton-tema-gris {
+  box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+  border: 1px solid #808080;
+  width: 150px; }
+
+.boton-tema-texto__margin {
+  margin-left: 16px; }
+
 .imagen-boton {
   vertical-align: middle; }
 
@@ -127,6 +143,10 @@
 
 .texto--caja-titulo__margin {
   margin: 0px 0px 0px 0.5%; }
+
+.texto-mis-guifos-navegacion {
+  text-decoration: none;
+  margin: 0px 0px 0px 15px; }
 
 .texto--h2-caja-crear-guifos {
   font-weight: bold;
@@ -312,6 +332,15 @@
   width: 50%;
   height: 367px; }
 
+.caja-contenedor-cambio-tema {
+  width: 170px;
+  height: 102px;
+  background: #E6E6E6;
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+
+.caja-contenedor-cambio-tema__margin {
+  margin-left: 15px; }
+
 /*Comportamiento*/
 body {
   background-color: #fef4fd;
@@ -336,14 +365,16 @@ body {
     align-items: center; }
   body .justify-center {
     justify-content: center; }
+  body .justify-start {
+    justify-content: flex-start; }
   body .div-barra-navegacion--crear-guifo--html {
     position: relative;
-    height: 102.6px;
+    height: 193.6px;
     width: 82.9%;
     justify-content: start; }
   body .flecha-atras {
     position: absolute;
-    top: 35px;
+    top: 51px;
     left: -40px;
     height: 24px;
     width: 24px; }
@@ -425,22 +456,19 @@ body {
   width: 100%; }
 
 .div-barra-navegacion {
-  height: 102.6px;
+  height: 193.6px;
   width: 82.9%; }
 
 .logo {
   width: 102.6px;
-  height: 64px; }
+  height: 114px; }
 
 .div-botones--barra-navegacion {
   width: 92.9%;
   justify-content: flex-end; }
 
-.boton-tema {
-  margin-left: 15px; }
-
-.texto-mis-gifos {
-  margin: 0px 0px 0px 15px; }
+.texto-mis-gifos__margin-top {
+  margin-top: 8px; }
 
 .contenedor-busqueda-blanco {
   width: 100%;
