Creacion botones down resultados

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -37,6 +37,10 @@ body {
     .justify-start {
         justify-content: flex-start;
     }
+
+    .justify-evenly {
+        justify-content: space-evenly;
+    }
 /*------------------------------------HTML CREAR-GUIFOS-------------------------------------*/
 .div-barra-navegacion--crear-guifo--html {
     position: relative;
