--- a/Koala/_variables.scss
+++ b/Koala/_variables.scss
@@ -60,7 +60,12 @@ $ancho-caja-contenedora-buscar-resultados: 82.9%;
 
 $alto-caja_hoy-sugerimos:32px; // 1.9%;
 $alto-caja-gifs-sugeridos: 313px;
+
+$ancho-caja-gifs-resultados:24.4%;// 294px
 $alto-caja-gifs-resultados: 304px;// 18.4%;
+
+$ancho-caja-gifs-interior:96.5%;// 294px
+$alto-caja-gifs-interior: 279px;// 18.4%;
 
 $ancho-caja-crear-gifos-1:  47.5%;//684px;
 $alto-caja-crear-gifos-1: 386px;
@@ -86,7 +91,7 @@ $ancho-caja-contenedor-busqueda-blanco: 88%;
 $ancho-caja_titulo: 82.9%; //1200px;
 $ancho-contenedorGifs: 82.9%; //1200px;
 $ancho-caja-gifs-sugeridos:25%; //288px;
-$ancho-caja-gifs-resultados:24.4%;// 294px
+
 
 /*------------------------------------------------------------------*/
 
