--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -46,6 +46,11 @@
 .boton-gris-claro {
   background: #F0E5EE; }
 
+.boton-tema-claro {
+  box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
+  border: 1px solid #CCA6C9;
+  width: 150px; }
+
 .boton-general_margin14px {
   margin-bottom: 14px; }
 
@@ -61,11 +66,6 @@
 .boton-general__margin-top {
   margin-top: 10px; }
 
-.boton-tema-claro {
-  box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
-  border: 1px solid #CCA6C9;
-  width: 150px; }
-
 .boton-tema-texto__margin {
   margin-left: 16px; }
 
@@ -78,6 +78,10 @@
 
 .imagen-boton {
   vertical-align: middle; }
+
+.flecha-abajo {
+  width: 30px;
+  height: 30px; }
 
 .boton--ver-mas {
   width: 81px;
@@ -112,19 +116,27 @@
 .boton-texto--grande {
   font-size: 16px;
   line-height: 28px;
-  width: 137px; }
+  width: 137px;
+  padding-left: 34px; }
+
+.boton-texto--saylor {
+  font-size: 16px;
+  line-height: 28px;
+  width: 144px;
+  padding-left: 12px; }
 
 .boton-texto--mediano {
   font-size: 16px;
   line-height: 28px;
-  width: 121px; }
+  width: 121px;
+  padding-left: 34px; }
 
 .boton-texto--pequeno {
   font-size: 12px;
   line-height: 24px; }
 
 .boton-texto-margin-left {
-  margin-left: 1.2%; }
+  margin-left: 1.4%; }
 
 .boton-texto--ver-mas {
   font-size: 14px;
@@ -344,7 +356,7 @@
   height: 367px; }
 
 .caja-contenedor-cambio-tema {
-  width: 170px;
+  width: 167px;
   height: 102px;
   background: #E6E6E6;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
