Estado Active boton buscar

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -200,6 +200,15 @@ body {
                 justify-content: space-evenly;
             }
 
+            .div-contenedor-boton-buscar {
+                width: 70px;
+                height: 30px;
+                margin-right: 2px;
+                padding-left: 41px;
+                line-height: 30px;
+            }
+            
+
                 .imagen-lupa {
                     position: absolute;
                     top: 10px;
