--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -111,25 +111,26 @@
   color: #FFFFFF; }
 
 .boton-texto--buscar {
-  color: #B4B4B4; }
+  color: #B4B4B4;
+  width: 102px; }
 
 .boton-texto--grande {
   font-size: 16px;
   line-height: 28px;
-  width: 137px;
-  padding-left: 34px; }
+  width: 117px;
+  padding-left: 20px; }
 
 .boton-texto--saylor {
   font-size: 16px;
   line-height: 28px;
-  width: 144px;
+  width: 131px;
   padding-left: 12px; }
 
 .boton-texto--mediano {
   font-size: 16px;
   line-height: 28px;
-  width: 121px;
-  padding-left: 34px; }
+  width: 105px;
+  padding-left: 19px; }
 
 .boton-texto--pequeno {
   font-size: 12px;
@@ -505,6 +506,13 @@ body {
   width: 100%;
   height: 72px;
   justify-content: space-evenly; }
+
+.div-contenedor-boton-buscar {
+  width: 70px;
+  height: 30px;
+  margin-right: 2px;
+  padding-left: 41px;
+  line-height: 30px; }
 
 .imagen-lupa {
   position: absolute;
