--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -115,17 +115,20 @@
 .boton-texto-azul-oscuro {color: $color-texto_botones-oscuro;}
 .boton-texto-blanco {color: $color-texto_botones-claro;}
 .boton-texto--buscar { color:$color-texto_botones-tono-medio; width: 102px; }
-.boton-texto--grande {font-size: $font-size_grande; line-height: $line-height_mediana; width: 117px; padding-left: 20px
-}
-.boton-texto--saylor {font-size: $font-size_grande; line-height: $line-height_mediana; width: 131px; padding-left: 12px;
-}
-
+.boton-texto--grande {font-size: $font-size_grande; line-height: $line-height_mediana; width: 117px; padding-left: 20px}
+.boton-texto--saylor {font-size: $font-size_grande; line-height: $line-height_mediana; width: 131px; padding-left: 12px;}
 .boton-texto--mediano {font-size: $font-size_grande; line-height: $line-height_mediana;width: 105px; padding-left: 19px}
 .boton-texto--pequeno {font-size: $font-size_pequeña; line-height: $line-height_pequena; }
+.boton-texto-largo-buscar-resultados {width: 98.5%; line-height: 27px;}
 
 
 .boton-texto-margin-left {
     margin-left: 1.4%;
+}
+
+.boton-texto-margenes {
+    padding-left: 1%;
+    margin-left: 2px;
 }
 
 
