Adecuando Marco dotted active

--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -120,6 +120,11 @@
 .boton-texto--mediano {font-size: $font-size_grande; line-height: $line-height_mediana;width: 105px; padding-left: 19px}
 .boton-texto--pequeno {font-size: $font-size_pequeña; line-height: $line-height_pequena; }
 .boton-texto-largo-buscar-resultados {width: 98.5%; line-height: 27px;}
+.boton-texto-144px {
+    width: 102px;
+    line-height: 27px;
+    padding-left: 35px;
+}
 
 
 .boton-texto-margin-left {
