--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -140,6 +140,11 @@
   width: 98.5%;
   line-height: 27px; }
 
+.boton-texto-144px {
+  width: 102px;
+  line-height: 27px;
+  padding-left: 35px; }
+
 .boton-texto-margin-left {
   margin-left: 1.4%; }
 
