--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -116,8 +116,8 @@
 .boton-texto-blanco {color: $color-texto_botones-claro;}
 .boton-texto--buscar { color:$color-texto_botones-tono-medio; width: 102px; }
 .boton-texto--grande {font-size: $font-size_grande; line-height: $line-height_mediana; width: 117px; padding-left: 20px}
-.boton-texto--saylor {font-size: $font-size_grande; line-height: $line-height_mediana; width: 131px; padding-left: 12px;}
-.boton-texto--mediano {font-size: $font-size_grande; line-height: $line-height_mediana;width: 105px; padding-left: 19px}
+.boton-texto--saylor {font-size: $font-size_grande; line-height: $line-height_mediana; width: 131px; padding-left: 12px; text-align: start;}
+.boton-texto--mediano {font-size: $font-size_grande; line-height: $line-height_mediana;width: 122px; }
 .boton-texto--pequeno {font-size: $font-size_pequeña; line-height: $line-height_pequena; }
 .boton-texto-largo-buscar-resultados {width: 98.5%; line-height: 27px;}
 .boton-texto-144px-line-heigth { line-height: 27px;}
