--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -124,13 +124,13 @@
   font-size: 16px;
   line-height: 28px;
   width: 131px;
-  padding-left: 12px; }
+  padding-left: 12px;
+  text-align: start; }
 
 .boton-texto--mediano {
   font-size: 16px;
   line-height: 28px;
-  width: 105px;
-  padding-left: 19px; }
+  width: 122px; }
 
 .boton-texto--pequeno {
   font-size: 12px;
@@ -550,6 +550,23 @@ body {
 .div-botones--barra-navegacion {
   width: 92.9%;
   justify-content: flex-end; }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  text-align: center; }
+
+.dropdown-contenedor {
+  display: none;
+  position: absolute;
+  overflow: auto;
+  z-index: 1; }
+
+.mostrar {
+  display: block; }
+
+.boton-saylor-day {
+  margin-top: 8px; }
 
 .texto-mis-gifos__margin-top {
   margin-top: 8px; }
