--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -534,6 +534,17 @@ body {
     z-index: 10000;
     margin-top: 7px;
     right: 8px; }
+  body .dropdown {
+    position: relative;
+    display: inline-block;
+    text-align: center; }
+  body .dropdown-contenedor {
+    display: none;
+    position: absolute;
+    overflow: auto;
+    z-index: 1; }
+  body .mostrar {
+    display: block; }
 
 /*-------------------------------------------------INDEX.HTML-----------------------------------------------------------*/
 .seccion-barra-navegacion {
@@ -550,20 +561,6 @@ body {
 .div-botones--barra-navegacion {
   width: 92.9%;
   justify-content: flex-end; }
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-  text-align: center; }
-
-.dropdown-contenedor {
-  display: none;
-  position: absolute;
-  overflow: auto;
-  z-index: 1; }
-
-.mostrar {
-  display: block; }
 
 .boton-saylor-day {
   margin-top: 8px; }
