Cambio tema dia y noche pendiente

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -232,16 +232,17 @@ body {
             }
 
             .div-botones--barra-navegacion {
-                width: 92.9%;;
+                width: 92.9%;
+                height: 114px;
                 justify-content: flex-end;   
             } 
             
 
                     
 
-                    .boton-saylor-day {
+                   /* .boton-saylor-day {
                         margin-top: 8px;
-                    }
+                    }*/
              
             .texto-mis-gifos__margin-top {
                 margin-top: 8px;
