--- a/Koala/estilo.scss
+++ b/Koala/estilo.scss
@@ -1,4 +1,5 @@
-@import 'variables';
+@import 'variables-night';
+//@import 'variables-day';
 @import 'elementos';
 @import 'bloques';
 @import 'modificadores';
