--- a/Koala/estilo.scss
+++ b/Koala/estilo.scss
@@ -1,5 +1,5 @@
-@import 'variables-night';
-//@import 'variables-day';
+//@import 'variables-night';
+@import 'variables-day';
 @import 'elementos';
 @import 'bloques';
 @import 'modificadores';
