--- a/estilos/sailor-night.css
+++ b/estilos/sailor-night.css
@@ -13,13 +13,13 @@
 /*------------------botones--------------------------*/
 .boton {
   display: inline-flex;
-  background: #F7C9F3;
+  background: #EE3EFE;
   height: 36px;
   box-shadow: inset -1px -1px 0 0 #A72CB3, inset 1px 1px 0 0 #FFFFFF; }
 
 .boton-general {
   display: inline-flex;
-  box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  box-shadow: inset -1px -1px 0 0 #A72CB3, inset 1px 1px 0 0 #FFFFFF;
   height: 36px; }
 
 .boton--extra-large {
@@ -35,7 +35,7 @@
   width: 36px; }
 
 .boton-rosado {
-  background: #F7C9F3; }
+  background: #EE3EFE; }
 
 .boton-blanco {
   background: #FFFFFF; }
@@ -74,7 +74,7 @@
   margin-left: 1.1%;
   box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
   border: 1px solid #808080;
-  background: #F0F0F0; }
+  background: #CCCCCC; }
 
 .imagen-boton {
   vertical-align: middle; }
@@ -93,7 +93,7 @@
 .boton--buscar {
   width: 8.5%;
   height: 36px;
-  background: #E6E6E6;
+  background: #B4B4B4;
   border: 1px solid #808080;
   box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
 
@@ -105,13 +105,13 @@
   height: 29px; }
 
 .boton-texto-azul-oscuro {
-  color: #110038; }
-
-.boton-texto-blanco {
   color: #FFFFFF; }
 
+.boton-texto-blanco {
+  color: #110038; }
+
 .boton-texto--buscar {
-  color: #B4B4B4;
+  color: #8F8F8F;
   width: 102px; }
 
 .boton-texto--grande {
@@ -190,7 +190,7 @@
 .boton-texto--ver-mas {
   font-size: 14px;
   line-height: 27px;
-  color: #110038;
+  color: #FFFFFF;
   width: 66px;
   height: 28px;
   margin-top: 3px;
@@ -245,7 +245,7 @@
   margin: 0px 0px 0px 0px; }
 
 .pestaña {
-  background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+  background: linear-gradient(270deg, #EE3EFE 0%, #2E32FB 100%);
   height: 24px; }
 
 .pestaña--top {
@@ -289,7 +289,7 @@
 .caja-contenedora-buscar {
   width: 82.9%;
   height: 99px;
-  background: #E6E6E6;
+  background: #B4B4B4;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
 
 .caja-contenedor-busqueda-blanco {
@@ -337,7 +337,7 @@
 .caja-crear-guifos-inicio {
   width: 47.5%;
   height: 386px;
-  background: #E6E6E6;
+  background: #B4B4B4;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
 
 .caja-crear-guifos-inicio-texto {
@@ -351,7 +351,7 @@
 .caja-crear-guifos-chequeo {
   width: 59.8%;
   height: 548px;
-  background: #E6E6E6;
+  background: #B4B4B4;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
 
 .caja-crear-guifos-chequeo___margin {
@@ -395,7 +395,7 @@
 .caja-exito {
   width: 721px;
   height: 391px;
-  background: #E6E6E6;
+  background: #B4B4B4;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
 
 .div-contenedor-exito {
@@ -421,7 +421,7 @@
 .caja-contenedor-cambio-tema {
   width: 167px;
   height: 102px;
-  background: #E6E6E6;
+  background: #B4B4B4;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
 
 .caja-contenedor-cambio-tema__margin {
@@ -431,7 +431,7 @@
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   height: 160px;
   width: 82.9%;
-  background: #E6E6E6; }
+  background: #B4B4B4; }
 
 .contenedor-input {
   width: 98%;
@@ -451,7 +451,7 @@
 
 /*Comportamiento*/
 body {
-  background-color: #fef4fd;
+  background-color: #141638;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
@@ -653,7 +653,7 @@ body {
 
 /*Estados boton rosado*/
 a:active {
-  color: #FFFFFF; }
+  color: #110038; }
 
 .marco-boton-dotted:active {
   border: 1px dotted #110038; }
@@ -681,7 +681,7 @@ a:active {
   border: 1px solid #808080; }
 
 .boton--buscar:hover {
-  background: #F7C9F3; }
+  background: #EE3EFE; }
 
 .boton--buscar:active {
   background: #CE36DB;
@@ -689,16 +689,16 @@ a:active {
   box-shadow: inset -1px -1px 0 0 #A72CB3, inset 1px 1px 0 0 #FFFFFF; }
 
 .boton-texto--buscar:hover {
-  color: #110038; }
+  color: #FFFFFF; }
 
 .boton-texto--buscar:active {
-  color: #110038; }
+  color: #FFFFFF; }
 
 .boton--ver-mas:hover {
   background: #2629CC; }
 
 .boton-texto--ver-mas:active {
-  color: #FFFFFF; }
+  color: #110038; }
 
 .boton-texto--grande:active {
   border: 1px dotted #110038; }
